# CMakeList.txt : CMake project for Auta, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Auta")

# Add source to this project's executable.
add_executable (Auta "Hudba.cpp" "Hudba.h" "HudbaDB.h" "HudbaDB.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET Auta PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
